Fix an ASAN error in Array#difference

[Bug #21303]